--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -70,6 +70,7 @@ input[type="range"]::-moz-range-thumb {
 
 .song-container h3 {
     font-size: 1rem;
+    padding-bottom: 1rem;
 }
 
 .player-container {
